syntax = "proto3";

package userService;
option go_package = ".;pb";

service UserInfo {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message User {
  string uuid = 1;
  string first_name = 2;
  string last_name = 3;
  string password = 5;
  string email = 6;
}

message RegisterRequest {
  string first_name = 2;
  string last_name = 3;
  string password = 4;
  string email = 5;
}

message RegisterResponse {
  User user = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string session_id = 2;
}